@startuml

title __DIALOGS's Class Diagram__\n

  namespace com.example.splashapp {
    namespace Dialogs {
      class com.example.splashapp.Dialogs.OkDialog {
          # head : String
          # mess : String
          + onClick()
          + onCreateView()
          + setHead()
          + setMess()
      }
    }
  }
  

  namespace com.example.splashapp {
    namespace Dialogs {
      class com.example.splashapp.Dialogs.SpinnerDialog {
          # currenttype : String
          # mycity : boolean
          # spinner : Spinner
          # typeof : String[]
          + getCurrentType()
          + getMyCity()
          + onClick()
          + onCreateView()
          + setMyCity()
      }
    }
  }
  

  com.example.splashapp.Dialogs.OkDialog -up-|> android.app.DialogFragment
  com.example.splashapp.Dialogs.SpinnerDialog -up-|> android.app.DialogFragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
